--- a/index.html
+++ b/index.html
@@ -140,17 +140,35 @@
     </div>
   </section>
 
-  <!-- Demo -->
+ <!-- Demo -->
 <section id="demo" class="py-5">
   <div class="container text-center" data-aos="fade-up">
     <h2 class="fw-bold mb-4">Demo SMART LAMP & FAN</h2>
-    <video controls class="rounded shadow" width="560">
-      <source src="video/demo.mp4" type="video/mp4">
-      Browser Anda tidak mendukung pemutar video.
-    </video>
-    <p class="mt-3">Demo penggunaan SMART LAMP FAN langsung dalam video.</p>
+    
+    <!-- Thumbnail Video -->
+    <a href="#" data-bs-toggle="modal" data-bs-target="#videoModal">
+      <video muted class="rounded shadow" width="250">
+        <source src="video/demo.mp4" type="video/mp4">
+        Browser Anda tidak mendukung pemutar video.
+      </video>
+    </a>
+    <p class="mt-3">Klik video untuk melihat tampilan lebih besar.</p>
   </div>
 </section>
+
+<!-- Modal Video -->
+<div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" style="max-width: 700px;"> <!-- ukuran sedang -->
+    <div class="modal-content bg-dark">
+      <div class="modal-body p-0 text-center">
+        <video id="mainVideo" controls autoplay class="w-100 rounded">
+          <source src="video/demo.mp4" type="video/mp4">
+          Browser Anda tidak mendukung pemutar video.
+        </video>
+      </div>
+    </div>
+  </div>
+</div>
 
 
   <!-- Testimoni -->
